# ezp2023plus

./: .gitignore  .gitmodules  Makefile  PKGBUILD  README.md  adw-demo-preferences-window.c  adw-demo-window.c  adw-demo-window.ui  chips-data-repository.c  chips_data_repository.c  chips_data_repository.h  debug-info.c  debug-info.h  dist.sh  ezp2023plus.gresources.xml  gtk-string-list-extension.c  gtk-string-list-extension.h  gtk_string_list_extension.c  main.c  meson.build  meson_options.txt  readme.md  style.css  test_hex.c  todo.md  ui_sketch.xcf  utilities.c  utilities.h
data/: 45-ezp2023.rules  dev.alexandro45.ezp2023plus.desktop.in  dev.alexandro45.ezp2023plus.metainfo.xml.in.in  meson.build
pages/welcome/: adw-demo-page-welcome.c  adw-demo-page-welcome.ui
po/: POTFILES.in  meson.build  uk.po
subprojects/: .gitignore  libezp2023plus.wrap
windows/: kb-shortcuts-overlay.ui
windows/chips-editor/: chip-edit-dialog.c  chip-edit-dialog.h  chip-edit-dialog.ui  chips-editor.c  chips-editor.h  chips-editor.ui  header.ui  list-row.c  list-row.h  row.ui
windows/main/: main-window.c  main-window.h  main-window.ui
